feat: add Gradle scaffold, production E2E example, and api-integrate skill (v4.3.0)
Add Gradle build.gradle.kts example alongside Maven pom.xml in scaffold skill
with identical dependency set. Add Example 4 to README showcasing full production
hardening flow (design-api → resilience → dependency → perf-test → monitor →
deploy → release). Create api-integrate skill covering OpenAPI client generation,
RestClient/WebClient/Feign setup, gRPC clients, error mapping, caching, webhook
receivers with HMAC verification, and WireMock integration tests. Add API
Integration section to CONVENTIONS.md.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>